Fade out Logo without movement fixed' ##Increase Line Spacing## for sub-content. *Fix Content margin* : Reduce font-size of Main Title

--- a/css/base.css
+++ b/css/base.css
@@ -55,7 +55,7 @@ div.main-content {
 /* Tablet Screen*/
 @media (min-width: 320px) {
     .mega-title {
-        font-size: 4.1rem;
+        font-size: 3.7rem;
         font-weight: bolder;
         margin-bottom: 0 !important;
         font-family: "Arial Black", Verdana, Tahoma, sans-serif;
@@ -64,10 +64,11 @@ div.main-content {
     }
 
     .mega-title-md {
-        font-size: 2.0rem;
+        font-size: 1.9rem;
         font-weight: bolder;
         font-family: "Arial Black", Verdana, Tahoma, sans-serif;
-        line-height: 1.5rem;
+        line-height: 1.7rem;
+        word-spacing: 2px;
         padding: 5px;
     }
 
@@ -95,7 +96,7 @@ div.main-content {
 
 
     .mega-title {
-        font-size: 8rem;
+        font-size: 6.8rem;
         font-weight: bolder;
         margin-bottom: 0 !important;
         font-family: "Arial Black", Verdana, Tahoma, sans-serif;
@@ -103,11 +104,11 @@ div.main-content {
     }
 
     .mega-title-md {
-        font-size: 4rem;
+        font-size: 3.7rem;
         font-weight: bolder;
         font-family: "Arial Black", Verdana, Tahoma, sans-serif;
         line-height: 2.8rem;
-        word-spacing: 1px;
+        word-spacing: 2px;
     }
 
     .content-button {
